test_case/rust-lang_rust/54161_421815978_11.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/impl-trait/no-method-suggested-traits.rs","byte_start":2410,"byte_end":2417,"line_start":80,"line_end":80,"column_start":47,sted_traits::Foo` in the current scope\n  --> /checkout/src/test/ui/impl-trait/no-method-suggested-traits.rs:81:37\n   |\nLL |     no_method_suggested_traits::Foo.method3();  //~ ERROR no method named\n   |                                     ^^^^^^^\n\n"}
[00:51:56] {"message":"no method named `method3` found for type `std::rc::Rc<&mut std::boxed::Box<&no_method_suggested_traits::Foo>>` in the current scope","code":{"code":"E0599","explanation":"\nThis error occurs when a method is used on a type which doesn't implement it:\n\nErroneous code example:\n\n